--- a/css/home.css
+++ b/css/home.css
@@ -1,50 +1,44 @@
 body{
-    margin:0px;
+    margin: 0;
     height: 100%;
 }
 
 .header{
-    padding:15px 0;
-    background-color: #ffffff;
+    padding: 15px 0;
+    background-color: white;
 }
 
 .header-content{
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items:center;
-    border:0px solid green;
+    align-items: center;
+    border: 0px solid green;
 }
 
 .logo-content{
     display: flex;
     flex-direction: row;
     align-items: center;
-    border:0px solid green;
+    border: 0px solid green;
     width: 80%;
 }
 
-.logo-content-img{
-    border: solid 0px #42515f;
-}
+.logo-content-img{border: solid 0px #42515f;}
 
 .emp-text{
     font: normal normal bold 20px/25px Montserrat;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat",sans-serif;
     letter-spacing: 0px;
-    color: #82a70c;
+    color:#82a70c;
     text-transform: capitalize;
 }
 
-.emp-payroll{
-    color: #42515f;
-}
+.emp-payroll{color: #42515f }
 
-*{
-    box-sizing: border-box;
-}
+*{box-sizing: border-box;}
 
-.main-content{
+.main-content {
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 80px);
@@ -54,17 +48,17 @@ body{
 }
 
 .header-content{
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items:center;
+    align-items: center;
     width: 80%;
     margin: 0 auto;
     padding-bottom: 25px;
 }
 
 .emp-detail-text{
-    font: normal normal bold 22px/25px Roboto;
+    font: normal normal bold 24px/25px Roboto;
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
@@ -72,18 +66,18 @@ body{
 
 .emp-count{
     background-color: #82a70c;
-    color: #ffffff;
+    color: white;
     border-radius: 42%;
     font-size: 16px;
     width: 26px;
     text-align: center;
-    display: inline;
+    display: inline-block;
 }
 
 .add-button{
-    font: normal normal normal 20px/24px Roboto;
+    font: normal normal normal 22px/29px Roboto;
     letter-spacing: 0px;
-    color: #ffffff;
+    color: white;
     opacity: 1;
     background: #82a70c 0% 0% no-repeat padding-box;
     border: none;
@@ -107,28 +101,25 @@ body{
     min-width: 800px;
 }
 
-td, th{
+td,th{
     text-align: left;
     padding: 5px 8px;
-    border: 0px solid #dddddd;
-    font-size: 110%;
 }
 
 th{
-    background: #42515f 0% 0% no-repeat padding-box;
-    height: 48px;
-    /* border-radius: 3px 3px 0px 0px; */
-    text-align: left;
-    font: normal normal normal 18px/24px Roboto;
-    letter-spacing: 0px;
-    color: #ffffff;
-    text-transform: uppercase;
-    opacity: 1;
-    border: 0px solid #dddddd;
+background: #42515f 0% 0% no-repeat padding-box;
+border-radius: 3px 3px 0px 0px;
+text-align: left;
+font: normal normal medium 18px/24px Roboto;
+letter-spacing: 0px;
+color: white;
+text-transform: uppercase;
+opacity: 1;
+border: 0px solid #dddddd;
 }
 
 tr:not(:first-child){
-    background: #ffffff 0% 0% no-repeat padding-box;
+    background: white 0% 0% no-repeat padding-box;
     border: 1px solid #e3e3e3;
     border-radius: 3px;
 }
@@ -143,11 +134,10 @@ td{
 td:first-child{
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 td img:first-child{
-    margin-right: 10px;
+    margin-right:  10px;
 }
 
 td img{
